# STD-Cringe

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md  cmaklis.txt  output.flac
.github/workflows/: cmake.yml  docker-image.yml  lint.yml  scan.yml
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake  cringe
cmake/dpp_external_project-prefix/src/dpp_external_project-stamp/: dpp_external_project-gitinfo.txt  dpp_external_project-update-info.txt
cmake/dpp_external_project-prefix/tmp/: dpp_external_project-cfgcmd.txt  dpp_external_project-gitclone.cmake  dpp_external_project-gitupdate.cmake  dpp_external_project-mkdirs.cmake
include/commands/: api.h  challenge.h  voice.h
include/commands/api/: ChatCommand.h  CodeCommand.h  DescribeCommand.h  EthanCommand.h  ImageCommand.h  KlimCommand.h  RedditCommand.h  TalkCommand.h  UserCommand.h  reddit_command.h
include/commands/chat/: chat_command.h  code_command.h  confession_command.h  describe_command.h  imagine_command.h  info_command.h  user_command.h
include/commands/misc/: ConfessionCommand.h  misc.h
include/commands/voice/: JoinCommand.h  PlayCommand.h  QueueCommand.h  SkipCommand.h  join_command.h  play_command.h  queue_command.h  skip_command.h
include/connectors/: cringe_database.h  database.h
include/env/: env.h
include/listeners/: SlashcommandListener.h
include/utils/: CringeAudio.h  base64.h  cringe.h  cringe_logger.h  embed.h  util.h
include/utils/audio/: cringe_audio.h  cringe_audio_helpers.h  cringe_audio_streaming.h  cringe_ffmpeg.h  cringe_queue.h  cringe_song.h  cringe_song_new.h  cringe_youtube.h  cringe_yt.h
include/utils/bot/: cringe_bot.h
include/utils/database/: cringe_database.h
include/utils/embed/: cringe_embed.h
include/utils/http/: cringe_api.h  cringe_curl.h  cringe_ollama.h  cringe_request.h
include/utils/listeners/: cringe_logger.h  cringe_slashcommand.h
include/utils/misc/: base64.h  cringe.h  cringe_64.h  cringe_color.h  cringe_helpers.h  cringe_icon.h
include/utils/validators/: validate_chat.h
src/: main.cpp
src/commands/: api.cpp  apis.cpp  challenge.cpp  challenges.cpp  commands.h  info.cpp  messages.cpp  misc.cpp  voice.cpp
src/commands/api/: ChatCommand.cpp  CodeCommand.cpp  DescribeCommand.cpp  EthanCommand.cpp  ImageCommand.cpp  KlimCommand.cpp  RedditCommand.cpp  TalkCommand.cpp  UserCommand.cpp  reddit_command.cpp
src/commands/challenge/: ChallengeCommand.cpp
src/commands/chat/: chat_command.cpp  code_command.cpp  confession_command.cpp  describe_command.cpp  imagine_command.cpp  info_command.cpp  user_command.cpp
src/commands/misc/: ConfessionCommand.cpp  EthanChangeCommand.cpp  EthanCommand.cpp  GetMessagesCommand.cpp  InfoCommand.cpp
src/commands/voice/: JoinCommand.cpp  PlayCommand.cpp  QueueCommand.cpp  SkipCommand.cpp  join_command.cpp  play_command.cpp  queue_command.cpp  skip_command.cpp
src/connectors/: database.cpp
src/listeners/: SlashcommandListener.cpp  message_listener.cpp  message_listener.h
src/utils/: CringeAudio.cpp  CringeEmbed.cpp  CringeQueue.cpp  CringeSong.cpp  base64.cpp  colors.h  embed.cpp  embeds.cpp  embeds.h  icon.h  logger.cpp  logger.h  util.cpp  utils.cpp  utils.h
src/utils/audio/: CringeAudio.cpp  CringeAudioSource.cpp  CringeQueue.cpp  CringeSong.cpp  cringe_audio.cpp  cringe_audio_helpers.cpp  cringe_audio_streaming.cpp  cringe_ffmpeg.cpp  cringe_queue.cpp  cringe_song.cpp  cringe_yt.cpp
src/utils/bot/: cringe_bot.cpp
src/utils/database/: cringe_database.cpp
src/utils/db/: CringeDatabase.cpp
src/utils/embed/: cringe_embed.cpp
src/utils/http/: cringe_api.cpp  cringe_curl.cpp  cringe_ollama.cpp  cringe_request.cpp
src/utils/listeners/: cringe_logger.cpp  cringe_slashcommand.cpp
src/utils/misc/: base64.cpp  cringe_64.cpp  cringe_helpers.cpp
src/utils/validators/: validate_chat.cpp
